--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Version Final: Incluye mdificiaciones a las pages: - index.html  - productos.html     Incluye modificacion al styles.css: se adaptó para utilizar Bootstrap",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/styles.scss css/styles.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Camila Gallegos",
   "license": "ISC"
